common-applications/control/cla-test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size:2m
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-connections: "400"
    nginx.ingress.kubernetes.io/limit-rps: "400"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header X-Frame-Options "SAMEORIGIN";
      add_header Content-Security-Policy "script-src 'self' *.baidu.com *.googleapis.com ers.baidu.com 'unsafe-eval' 'unsafe-inline';object-src 'none';frame-ancestors 'self'";
  name: cla-ingress
spec:
  tls:
    - hosts:
        - test-clasign.osinfra.cn
      secretName: tls-secrets
  rules:
    - host: test-clasign.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: claservice
              servicePort: 80
            path: /
